Mid year update

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -72156,15 +72156,15 @@
 }
 
 @article{ORBSLAM3_TRO,
-  title =		 {{ORB-SLAM3}: An Accurate Open-Source Library for Visual,
+  title			  = {{ORB-SLAM3}: An Accurate Open-Source Library for Visual,
                   Visual-Inertial and Multi-Map {SLAM}},
-  author =		 {Campos, Carlos AND Elvira, Richard AND G\´omez, Juan J. AND
-                  Montiel, Jos\'e M. M. AND Tard\'os, Juan D.},q
-  journal =		 {IEEE Transactions on Robotics},
-  volume =		 {37},
-  number =		 {6},
-  pages =		 {1874-1890},
-  year =		 {2021}
+  author		  = {Campos, Carlos AND Elvira, Richard AND G\´omez, Juan J. AND
+                  Montiel, Jos\'e M. M. AND Tard\'os, Juan D.},
+  journal		  = {IEEE Transactions on Robotics},
+  volume		  = 37,
+  number		  = 6,
+  pages			  = {1874-1890},
+  year			  = 2021
 }
 
 @INPROCEEDINGS{9561107,
@@ -72181,19 +72181,19 @@
 
 @inproceedings{wang2023pypose,
   title			  = {{PyPose}: A Library for Robot Learning with Physics-based
-                  Optimization},
+                     Optimization},
   author		  = {Wang, Chen and Gao, Dasong and Xu, Kuan and Geng, Junyi and
-                  Hu, Yaoyu and Qiu, Yuheng and Li, Bowen and Yang, Fan and
-                  Moon, Brady and Pandey, Abhinav and Aryan and Xu, Jiahe and
-                  Wu, Tianhao and He, Haonan and Huang, Daning and Ren,
-                  Zhongqiang and Zhao, Shibo and Fu, Taimeng and Reddy, Pranay
-                  and Lin, Xiao and Wang, Wenshan and Shi, Jingnan and Talak,
-                  Rajat and Cao, Kun and Du, Yi and Wang, Han and Yu, Huai and
-                  Wang, Shanzhao and Chen, Siyu and Kashyap, Ananth and Bandaru,
-                  Rohan and Dantu, Karthik and Wu, Jiajun and Xie, Lihua and
-                  Carlone, Luca and Hutter, Marco and Scherer, Sebastian},
+                     Hu, Yaoyu and Qiu, Yuheng and Li, Bowen and Yang, Fan and
+                     Moon, Brady and Pandey, Abhinav and Aryan and Xu, Jiahe and
+                     Wu, Tianhao and He, Haonan and Huang, Daning and Ren,
+                     Zhongqiang and Zhao, Shibo and Fu, Taimeng and Reddy, Pranay
+                     and Lin, Xiao and Wang, Wenshan and Shi, Jingnan and Talak,
+                     Rajat and Cao, Kun and Du, Yi and Wang, Han and Yu, Huai and
+                     Wang, Shanzhao and Chen, Siyu and Kashyap, Ananth and Bandaru,
+                     Rohan and Dantu, Karthik and Wu, Jiajun and Xie, Lihua and
+                     Carlone, Luca and Hutter, Marco and Scherer, Sebastian},
   booktitle		  = {IEEE/CVF Conference on Computer Vision and Pattern
-                  Recognition (CVPR)},
+                     Recognition (CVPR)},
   year			  = 2023
 }
 
@@ -72209,4 +72209,652 @@
   pages			  = {1-118},
   author		  = {Thomas M. Moerland and Joost Broekens and Aske Plaat and
                      Catholijn M. Jonker}
+}
+
+
+@article{neu2017unified,
+  title			  = {A unified view of entropy-regularized markov decision
+                  processes},
+  author		  = {Neu, Gergely and Jonsson, Anders and G{\'o}mez,
+                  Vicen{\c{c}}},
+  journal		  = {arXiv preprint arXiv:1705.07798},
+  year			  = {2017}
+}
+
+@article{Alhaija2018IJCV_kitti_semantic,
+  title           = {Augmented Reality Meets Computer Vision: Efficient Data
+                  Generation for Urban Driving Scenes},
+  author          = {Hassan Alhaija and Siva Mustikovela and Lars Mescheder and
+                  Andreas Geiger and Carsten Rother},
+  year            = 2018,
+  journal         = {International Journal of Computer Vision (IJCV)},
+  volume          = 126,
+  pages           = {961--972},
+  publisher       = {Springer}
+}
+
+@article{BrostowFC:PRL2008_Camvid,
+  title           = {Semantic Object Classes in Video: A High-Definition Ground
+                  Truth Database},
+  author          = {Gabriel J. Brostow and Julien Fauqueur and Roberto Cipolla},
+  year            = 2008,
+  journal         = {Pattern Recognition Letters},
+  volume          = {30},
+  number          = {2},
+  pages           = {88--97},
+  year            = {2009},
+  publisher       = {Elsevier}
+}
+
+@inproceedings{Chen_2018_DeeplabV3Plus,
+  title           = {Encoder-Decoder with Atrous Separable Convolution for
+                  Semantic Image Segmentation},
+  author          = {Chen, Liang-Chieh and Zhu, Yukun and Papandreou, George and
+                  Schroff, Florian and Adam, Hartwig},
+  year            = 2018,
+  booktitle       = {Computer Vision -- ECCV 2018},
+  publisher       = {Springer International Publishing},
+  address         = {Cham},
+  pages           = {833--851},
+  doi             = {10.1007/978-3-030-01234-2_49},
+  isbn            = {978-3-030-01234-2},
+  url             = {https://dx.doi.org/10.1007/978-3-030-01234-2_49},
+  editor          = {Ferrari, Vittorio and Hebert, Martial and Sminchisescu,
+                  Cristian and Weiss, Yair}
+}
+
+@misc{chen2017rethinking_deeplabv3,
+  title           = {Rethinking Atrous Convolution for Semantic Image
+                  Segmentation},
+  author          = {Liang-Chieh Chen and George Papandreou and Florian Schroff
+                  and Hartwig Adam},
+  year            = 2017,
+  eprint          = {1706.05587},
+  archiveprefix   = {arXiv},
+  primaryclass    = {cs.CV}
+}
+
+@article{Chollet_2017_Xception,
+  title           = {Xception: Deep Learning with Depthwise Separable
+                  Convolutions},
+  author          = {Chollet, Francois},
+  year            = 2017,
+  month           = {Jul},
+  journal         = {2017 IEEE Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  publisher       = {IEEE},
+  pages           = {1251--1258},
+  doi             = {10.1109/cvpr.2017.195},
+  isbn            = 9781538604571,
+  url             = {http://dx.doi.org/10.1109/CVPR.2017.195}
+}
+
+@inproceedings{Cordts_2016_CVPR_cityscapes,
+  title           = {The Cityscapes Dataset for Semantic Urban Scene
+                  Understanding},
+  author          = {Cordts, Marius and Omran, Mohamed and Ramos, Sebastian and
+                  Rehfeld, Timo and Enzweiler, Markus and Benenson, Rodrigo and
+                  Franke, Uwe and Roth, Stefan and Schiele, Bernt},
+  year            = 2016,
+  pages           = {3213--3223},
+  month           = {June},
+  booktitle       = {The IEEE Conference on Computer Vision and Pattern
+                  Recognition (CVPR)}
+}
+
+@article{Douillard11Classification,
+  title           = {Classification and Semantic Mapping of Urban Environments},
+  author          = {B. Douillard and D. Fox and F. Ramos and H. Durrant-Whyte},
+  year            = 2011,
+  journal         = {The International Journal of Robotics Research},
+  volume          = 30,
+  number          = 1,
+  pages           = {5--32},
+  doi             = {10.1177/0278364910373409},
+  url             = {https://doi.org/10.1177/0278364910373409},
+  eprint          = {https://doi.org/10.1177/0278364910373409}
+}
+
+@inproceedings{dwivedi2021bird,
+  title           = {Bird’s eye view segmentation using lifted 2D semantic
+                  features},
+  author          = {Dwivedi, Isht and Malla, Srikanth and Chen, Yi-Ting and
+                  Dariush, Behzad},
+  year            = 2021,
+  booktitle       = {British Machine Vision Conference (BMVC)},
+  pages           = {6985--6994}
+}
+
+@article{epnp,
+  title           = {EPnP: An accurate O(n) solution to the PnP problem},
+  author          = {Lepetit, Vincent and Moreno-Noguer, Francesc and Fua,
+                  Pascal},
+  year            = 2009,
+  month           = 02,
+  journal         = {International Journal of Computer Vision},
+  volume          = 81,
+  pages           = {155--166},
+  doi             = {10.1007/s11263-008-0152-6},
+  publisher       = {Springer}
+}}
+
+@inproceedings{fsr19:avl,
+  title           = {Lessons Learned From Deploying Autonomous Vehicles at {UC
+                  San Diego}},
+  author          = {David Paz and Po-Jung Lai and Sumukha Harish and Hengyuan
+                  Zhang and Nathan Chan and Chun Hu and Sumit Binnani and Henrik
+                  Christensen},
+  year            = 2019,
+  month           = {August},
+  booktitle       = {Field and Service Robotics},
+  address         = {Tokyo, JP},
+  pages           = {427--441},
+  organization    = {Springer}
+}
+
+@article{He_2016_resnet,
+  title           = {Deep Residual Learning for Image Recognition},
+  author          = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun,
+                  Jian},
+  year            = 2016,
+  month           = {Jun},
+  journal         = {2016 IEEE Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  publisher       = {IEEE},
+  doi             = {10.1109/cvpr.2016.90},
+  isbn            = 9781467388511,
+  pages           = {770--778},
+  url             = {http://dx.doi.org/10.1109/CVPR.2016.90}
+}
+
+@article{heinzler2020cnn_rangenet,
+  title           = {CNN-Based Lidar Point Cloud De-Noising in Adverse Weather},
+  author          = {Heinzler, Robin and Piewak, Florian and Schindler, Philipp
+                  and Stork, Wilhelm},
+  year            = 2020,
+  journal         = {IEEE Robotics and Automation Letters},
+  publisher       = {IEEE},
+  volume          = 5,
+  number          = 2,
+  pages           = {2514--2521}
+}
+
+@inproceedings{homayounfar2019dagmapper,
+  title           = {DAGMapper: Learning to Map by Discovering Lane Topology},
+  author          = {Homayounfar, Namdar and Ma, Wei-Chiu and Liang, Justin and
+                  Wu, Xinyu and Fan, Jack and Urtasun, Raquel},
+  year            = 2019,
+  booktitle       = {Proceedings of the IEEE International Conference on
+                  Computer Vision},
+  pages           = {2911--2920}
+}
+
+@article{ImageNet2015,
+  title           = {{ImageNet Large Scale Visual Recognition Challenge}},
+  author          = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan
+                  Krause and Sanjeev Satheesh and Sean Ma and Zhiheng Huang and
+                  Andrej Karpathy and Aditya Khosla and Michael Bernstein and
+                  Alexander C. Berg and Li Fei-Fei},
+  year            = 2015,
+  journal         = {International Journal of Computer Vision (IJCV)},
+  volume          = 115,
+  number          = 3,
+  pages           = {211--252},
+  doi             = {10.1007/s11263-015-0816-y}
+}
+
+@inproceedings{Jiao18MLHDMap,
+  title           = {Machine Learning Assisted High-Definition Map Creation},
+  author          = {J. {Jiao}},
+  year            = 2018,
+  month           = {July},
+  booktitle       = {2018 IEEE 42nd Annual Computer Software and Applications
+                  Conference (COMPSAC)},
+  volume          = 01,
+  pages           = {367--373},
+  doi             = {10.1109/COMPSAC.2018.00058},
+  issn            = {0730-3157},
+}
+
+@article{KOSTAVELIS201586,
+  title           = {Semantic mapping for mobile robotics tasks: A survey},
+  author          = {Ioannis Kostavelis and Antonios Gasteratos},
+  year            = 2015,
+  journal         = {Robotics and Autonomous Systems},
+  volume          = 66,
+  pages           = {86--103},
+  doi             = {https://doi.org/10.1016/j.robot.2014.12.006},
+  issn            = {0921-8890},
+  url             =
+                  {http://www.sciencedirect.com/science/article/pii/S0921889014003030},
+}
+
+@inproceedings{Levinson10ProbMap,
+  title           = {Robust vehicle localization in urban environments using
+                  probabilistic maps},
+  author          = {J. {Levinson} and S. {Thrun}},
+  year            = 2010,
+  month           = {May},
+  booktitle       = {2010 IEEE International Conference on Robotics and
+                  Automation},
+  pages           = {4372--4378},
+  doi             = {10.1109/ROBOT.2010.5509700},
+  issn            = {1050-4729},
+}
+
+@inproceedings{Long_2015_CVPR_FCNNet,
+  title           = {Fully Convolutional Networks for Semantic Segmentation},
+  author          = {Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
+  year            = 2015,
+  month           = {June},
+  pages           = {3431--3440},
+  booktitle       = {The IEEE Conference on Computer Vision and Pattern
+                  Recognition (CVPR)}
+}
+
+@inproceedings{mattyus2017deeproadmapper,
+  title           = {Deeproadmapper: Extracting road topology from aerial
+                  images},
+  author          = {M{\'a}ttyus, Gell{\'e}rt and Luo, Wenjie and Urtasun,
+                  Raquel},
+  year            = 2017,
+  booktitle       = {Proceedings of the IEEE International Conference on
+                  Computer Vision},
+  pages           = {3438--3446}
+}
+
+@inproceedings{Maturana18RealtimeSemantic,
+  title           = {Real-Time Semantic Mapping for Autonomous Off-Road
+                  Navigation},
+  author          = {Maturana, Daniel and Chou, Po-Wei and Uenoyama, Masashi and
+                  Scherer, Sebastian},
+  year            = 2018,
+  booktitle       = {Field and Service Robotics},
+  publisher       = {Springer International Publishing},
+  address         = {Chamonix},
+  pages           = {335--350},
+  isbn            = {978-3-319-67361-5},
+  editor          = {Hutter, Marco and Siegwart, Roland},
+}
+
+@inproceedings{MVD2017_Mapillary_Vistas,
+  title           = {The Mapillary Vistas Dataset for Semantic Understanding of
+                  Street Scenes},
+  author          = {Neuhold, Gerhard and Ollmann, Tobias and Rota Bul\`o,
+                  Samuel and Kontschieder, Peter},
+  year            = 2017,
+  booktitle       = {International Conference on Computer Vision (ICCV)},
+  pages           = {4990--4999},
+  url             = {https://www.mapillary.com/dataset/vistas}
+}
+
+@inproceedings{Paz2020IROSSemanticMapping,
+  title           = {Probabilistic Semantic Mapping for Urban Autonomous Driving
+                  Applications},
+  author          = {Paz, David and Zhang, Hengyuan and Li, Qinru and Xiang, Hao
+                  and Christensen, Henrik I.},
+  year            = 2020,
+  booktitle       = {2020 IEEE/RSJ International Conference on Intelligent
+                  Robots and Systems (IROS)},
+  pages           = {2059--2064},
+  doi             = {10.1109/IROS45743.2020.9341738}
+}
+
+@inproceedings{Paz2022TridentNet,
+  title           = {TridentNet: A Conditional Generative Model for Dynamic
+                  Trajectory Generation},
+  author          = {Paz, David and Zhang, Hengyuan and Christensen, Henrik I.},
+  year            = 2022,
+  booktitle       = {Intelligent Autonomous Systems 16},
+  publisher       = {Springer International Publishing},
+  address         = {Cham},
+  pages           = {403--416},
+  isbn            = {978-3-030-95892-3},
+  editor          = {Ang Jr, Marcelo H. and Asama, Hajime and Lin, Wei and
+                  Foong, Shaohui}
+}
+
+@inproceedings{Paz2022TridentNetV2,
+  title           = {TridentNetV2: Lightweight Graphical Global Plan
+                  Representations for Dynamic Trajectory Generation},
+  author          = {Paz, David and Xiang, Hao and Liang, Andrew and
+                  Christensen, Henrik I.},
+  year            = 2022,
+  booktitle       = {2022 International Conference on Robotics and Automation
+                  (ICRA)},
+  pages           = {9265--9271},
+  doi             = {10.1109/ICRA46639.2022.9811591}
+}
+
+@inproceedings{Sengupta12DenseVisual,
+  title           = {Automatic dense visual semantic mapping from street-level
+                  imagery},
+  author          = {S. {Sengupta} and P. {Sturgess} and L. {Ladický} and P. H.
+                  S. {Torr}},
+  year            = 2012,
+  month           = {Oct},
+  booktitle       = {2012 IEEE/RSJ International Conference on Intelligent
+                  Robots and Systems},
+  pages           = {857--862},
+  doi             = {10.1109/IROS.2012.6385958},
+  issn            = {2153-0858},
+}
+
+@inproceedings{Sengupta13Stereo,
+  title           = {Urban 3D semantic modelling using stereo vision},
+  author          = {S. {Sengupta} and E. {Greveson} and A. {Shahrokni} and P.
+                  H. S. {Torr}},
+  year            = 2013,
+  month           = {May},
+  booktitle       = {2013 IEEE International Conference on Robotics and
+                  Automation},
+  pages           = {580--585},
+  doi             = {10.1109/ICRA.2013.6630632},
+  issn            = {1050-4729},
+}
+
+@inproceedings{Shao2017HIGHACCURACYVL,
+  title           = {High-Accuracy vehicle localization using a pre-built
+                  probability map},
+  author          = {Yunming Shao and Charles Toth and Dorota A.
+                  Grejner-Brzezinska and Lowber B. Strange},
+  month           = {March},
+  venue           = {Baltimore, MD},
+  booktitle       = {IGTF 2017 – Imaging & Geospatial Technology Forum 2017},
+  year            = 2017
+}
+
+@article{Tchapmi_2017_segcloud,
+  title           = {SEGCloud: Semantic Segmentation of 3D Point Clouds},
+  author          = {Tchapmi, Lyne and Choy, Christopher and Armeni, Iro and
+                  Gwak, JunYoung and Savarese, Silvio},
+  year            = 2017,
+  month           = {Oct},
+  journal         = {2017 International Conference on 3D Vision (3DV)},
+  publisher       = {IEEE},
+  pages           = {537--547},
+  doi             = {10.1109/3dv.2017.00067},
+  isbn            = 9781538626108,
+  url             = {http://dx.doi.org/10.1109/3DV.2017.00067}
+}
+
+@misc{wang2018pointseg,
+  title           = {PointSeg: Real-Time Semantic Segmentation Based on 3D LiDAR
+                  Point Cloud},
+  author          = {Yuan Wang and Tianyue Shi and Peng Yun and Lei Tai and Ming
+                  Liu},
+  year            = 2018,
+  eprint          = {1807.06288},
+  archiveprefix   = {arXiv},
+  primaryclass    = {cs.CV}
+}
+
+@article{Wolf08SemanticMapping,
+  title           = {Semantic Mapping Using Mobile Robots},
+  author          = {D. F. {Wolf} and G. S. {Sukhatme}},
+  year            = 2008,
+  month           = {April},
+  journal         = {IEEE Transactions on Robotics},
+  volume          = 24,
+  number          = 2,
+  pages           = {245--258},
+  doi             = {10.1109/TRO.2008.917001},
+  issn            = {1941-0468},
+}
+
+@article{Wu_2018_squeezeseg,
+  title           = {SqueezeSeg: Convolutional Neural Nets with Recurrent CRF
+                  for Real-Time Road-Object Segmentation from 3D LiDAR Point
+                  Cloud},
+  author          = {Wu, Bichen and Wan, Alvin and Yue, Xiangyu and Keutzer,
+                  Kurt},
+  year            = 2018,
+  month           = {May},
+  journal         = {2018 IEEE International Conference on Robotics and
+                  Automation (ICRA)},
+  publisher       = {IEEE},
+  pages           = {1887--1893},
+  doi             = {10.1109/icra.2018.8462926},
+  isbn            = 9781538630815,
+  url             = {http://dx.doi.org/10.1109/ICRA.2018.8462926}
+}
+
+@inproceedings{Wu18ProbMapPedes,
+  title           = {Probabilistic Map-based Pedestrian Motion Prediction Taking
+                  Traffic Participants into Consideration},
+  author          = {J. {Wu} and J. {Ruenz} and M. {Althoff}},
+  year            = 2018,
+  month           = {June},
+  booktitle       = {2018 IEEE Intelligent Vehicles Symposium (IV)},
+  pages           = {1285--1292},
+  doi             = {10.1109/IVS.2018.8500562},
+  issn            = {1931-0587},
+}
+
+@article{Xie_2017_ResNeXt,
+  title           = {Aggregated Residual Transformations for Deep Neural
+                  Networks},
+  author          = {Xie, Saining and Girshick, Ross and Dollar, Piotr and Tu,
+                  Zhuowen and He, Kaiming},
+  year            = 2017,
+  month           = {Jul},
+  journal         = {2017 IEEE Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  publisher       = {IEEE},
+  pages           = {1492--1500},
+  doi             = {10.1109/cvpr.2017.634},
+  isbn            = 9781538604571,
+  url             = {http://dx.doi.org/10.1109/CVPR.2017.634}
+}
+
+@article{Zhao_2017_PSPNet,
+  title           = {Pyramid Scene Parsing Network},
+  author          = {Zhao, Hengshuang and Shi, Jianping and Qi, Xiaojuan and
+                  Wang, Xiaogang and Jia, Jiaya},
+  year            = 2017,
+  month           = {Jul},
+  journal         = {2017 IEEE Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  publisher       = {IEEE},
+  pages           = {2881--2890},
+  doi             = {10.1109/cvpr.2017.660},
+  isbn            = 9781538604571,
+  url             = {http://dx.doi.org/10.1109/CVPR.2017.660}
+}
+
+@article{Zhu_2019_nvidia_label_relaxation,
+  title           = {Improving Semantic Segmentation via Video Propagation and
+                  Label Relaxation},
+  author          = {Zhu, Yi and Sapra, Karan and Reda, Fitsum A. and Shih,
+                  Kevin J. and Newsam, Shawn and Tao, Andrew and Catanzaro,
+                  Bryan},
+  year            = 2019,
+  month           = {Jun},
+  journal         = {2019 IEEE/CVF Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  publisher       = {IEEE},
+  pages           = {8856--8865},
+  doi             = {10.1109/cvpr.2019.00906},
+  isbn            = 9781728132938,
+  url             = {http://dx.doi.org/10.1109/CVPR.2019.00906}
+}
+
+@inproceedings{jain2022oneformer,
+  title           = {{OneFormer: One Transformer to Rule Universal Image
+                  Segmentation}},
+  author          = {Jitesh Jain and Jiachen Li and MangTik Chiu and Ali Hassani
+                  and Nikita Orlov and Humphrey Shi},
+  booktitle       = {Proceedings of the IEEE/CVF Conference on Computer Vision
+                  and Pattern Recognition},
+  pages           = {2989--2998},
+  journal         = {CVPR},
+}
+
+@inproceedings{SunXLW19_HRNET1,
+  title           = {Deep High-Resolution Representation Learning for Human Pose
+                  Estimation},
+  author          = {Ke Sun and Bin Xiao and Dong Liu and Jingdong Wang},
+  booktitle       = {Proceedings of the IEEE/CVF conference on computer vision
+                  and pattern recognition},
+  pages           = {5693--5703},
+  year            = {2019}
+}
+
+@article{WangSCJDZLMTWLX19TPAMI_HRNET2,
+  title           = {Deep High-Resolution Representation Learning for Visual
+                  Recognition},
+  author          = {Jingdong Wang and Ke Sun and Tianheng Cheng and Borui Jiang
+                  and Chaorui Deng and Yang Zhao and Dong Liu and Yadong Mu and
+                  Mingkui Tan and Xinggang Wang and Wenyu Liu and Bin Xiao},
+  journal         = {IEEE transactions on pattern analysis and machine
+                  intelligence},
+  volume          = {43},
+  number          = {10},
+  pages           = {3349--3364},
+  year            = {2019}
+}
+
+@article{YuanCW19_HRNET_OCR,
+  title           = {Object-Contextual Representations for Semantic
+                  Segmentation},
+  author          = {Yuhui Yuan and Xilin Chen and Jingdong Wang},
+  booktitle       = {Computer Vision--ECCV 2020: 16th European Conference,
+                  Glasgow, UK, August 23--28, 2020, Proceedings, Part VI 16},
+  pages           = {173--190},
+  year            = {2020},
+  organization    = {Springer}
+}
+
+@misc{tao2020hierarchicalMSHRNet,
+  title           = {Hierarchical Multi-Scale Attention for Semantic
+                  Segmentation},
+  author          = {Andrew Tao and Karan Sapra and Bryan Catanzaro},
+  year            = {2020},
+  eprint          = {2005.10821},
+  archivePrefix   = {arXiv},
+  primaryClass    = {cs.CV}
+}
+
+
+@inproceedings{BahdanauCB14_Attention,
+  author          = {Dzmitry Bahdanau and Kyunghyun Cho and Yoshua Bengio},
+  editor          = {Yoshua Bengio and Yann LeCun},
+  title           = {Neural Machine Translation by Jointly Learning to Align and
+                  Translate},
+  booktitle       = {3rd International Conference on Learning Representations,
+                  {ICLR} 2015, San Diego, CA, USA, May 7-9, 2015, Conference
+                  Track Proceedings},
+  year            = {2015},
+  url             = {http://arxiv.org/abs/1409.0473},
+  timestamp       = {Wed, 17 Jul 2019 10:40:54 +0200},
+  biburl          = {https://dblp.org/rec/journals/corr/BahdanauCB14.bib},
+  bibsource       = {dblp computer science bibliography, https://dblp.org}
+}
+
+@INPROCEEDINGS{Can2022CVPR_Topology,
+  author          = {Can, Yigit Baran and Liniger, Alexander and Paudel, Danda
+                  Pani and Van Gool, Luc},
+  booktitle       = {2022 IEEE/CVF Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  title           = {Topology Preserving Local Road Network Estimation from
+                  Single Onboard Camera Image},
+  year            = {2022},
+  pages           = {17242-17251},
+  doi             = {10.1109/CVPR52688.2022.01675}
+}
+
+
+@INPROCEEDINGS{Zhou2021IROS_HDmap,
+  author          = {Zhou, Yiyang and Takeda, Yuichi and Tomizuka, Masayoshi and
+                  Zhan, Wei},
+  booktitle       = {2021 IEEE/RSJ International Conference on Intelligent
+                  Robots and Systems (IROS)},
+  title           = {Automatic Construction of Lane-level HD Maps for Urban
+                  Scenes},
+  year            = {2021},
+  pages           = {6649-6656},
+  doi             = {10.1109/IROS51168.2021.9636205}
+}
+
+@inproceedings{Dwivedi2021BirdsEVLift,
+  title           = {Bird's Eye View Segmentation Using Lifted 2D Semantic
+                  Features},
+  author          = {Isht Dwivedi and Srikanth Malla and Yi-Ting Chen and Behzad
+                  Dariush},
+  booktitle       = {British Machine Vision Conference (BMVC)},
+  pages           = {6985--6994},
+  year            = {2021}
+}
+
+@ARTICLE{Can2022RAL_BEVSemantic,
+  author          = {Can, Yigit Baran and Liniger, Alexander and Unal, Ozan and
+                  Paudel, Danda and Van Gool, Luc},
+  journal         = {IEEE Robotics and Automation Letters},
+  title           = {Understanding Bird’s-Eye View of Road Semantics Using an
+                  Onboard Camera},
+  year            = {2022},
+  volume          = {7},
+  number          = {2},
+  pages           = {3302-3309},
+  doi             = {10.1109/LRA.2022.3146898}
+}
+
+@INPROCEEDINGS{Homayounfar2018CVPR_Attention_Online_map,
+  author          = {Homayounfar, Namdar and Ma, Wei-Chiu and Lakshmikanth,
+                  Shrinidhi Kowshika and Urtasun, Raquel},
+  booktitle       = {2018 IEEE/CVF Conference on Computer Vision and Pattern
+                  Recognition},
+  title           = {Hierarchical Recurrent Attention Networks for Structured
+                  Online Maps},
+  year            = {2018},
+  pages           = {3417-3426},
+  doi             = {10.1109/CVPR.2018.00360}
+}
+
+
+@misc{liu2022bevfusion,
+  title           = {BEVFusion: Multi-Task Multi-Sensor Fusion with Unified
+                  Bird's-Eye View Representation},
+  author          = {Zhijian Liu and Haotian Tang and Alexander Amini and Xinyu
+                  Yang and Huizi Mao and Daniela Rus and Song Han},
+  year            = {2022},
+  eprint          = {2205.13542},
+  archivePrefix   = {arXiv},
+  primaryClass    = {cs.CV}
+}
+
+@inproceedings{10.1117/12.2518514,
+  author		  = {David Last and Paul Thomas and Steven Hiscocks and Jordi
+                     Barr and David Kirkland and Mamoon Rashid and Sang Bin Li and
+                     Lyudmil Vladimirov},
+  title			  = {{Stone Soup: announcement of beta release of an open-source
+                     framework for tracking and state estimation}},
+  volume		  = {11018},
+  booktitle		  = {Signal Processing, Sensor/Information Fusion, and Target
+                     Recognition XXVIII},
+  editor		  = {Ivan Kadar and Erik P. Blasch and Lynne L. Grewe},
+  organization	  = {International Society for Optics and Photonics},
+  publisher		  = {SPIE},
+  pages			  = {1101807},
+  keywords		  = {Stone Soup, Tracking, State Estimation, Metrics, Open
+                     Source, Software Design, Software Development, Data Fusion},
+  year			  = {2019},
+  doi			  = {10.1117/12.2518514},
+  URL			  = {https://doi.org/10.1117/12.2518514}
+}
+
+@inproceedings{10.1117/12.2663719,
+  author		  = {Rohan Patil and Alexander Langley and Henrik Christensen},
+  title			  = {{Scaling up multi-agent patrolling in urban environments}},
+  volume		  = {12544},
+  booktitle		  = {Open Architecture/Open Business Model Net-Centric Systems
+                  and Defense Transformation 2023},
+  editor		  = {Raja Suresh},
+  organization	  = {International Society for Optics and Photonics},
+  publisher		  = {SPIE},
+  pages			  = {125440G},
+  keywords		  = {game theory, multi-agent autonomy, decentralized},
+  year			  = {2023},
+  doi			  = {10.1117/12.2663719},
+  URL			  = {https://doi.org/10.1117/12.2663719}
 }
