--- a/bib-file.bib
+++ b/bib-file.bib
@@ -80156,7 +80156,7 @@
 }
 
 @article{pentlandLiu99,
-  title =        {{Modeling and Prediction of Human Behaviour}},
+  title =        {{Modeling and Predict>ion of Human Behaviour}},
   author =       {Pentland, A. and Liu, A.},
   year =         1999,
   journal =      {Neural Computation},
