general literature update

--- a/newlib.bib
+++ b/newlib.bib
@@ -79030,3 +79030,17 @@
   pages =        {69--78},
   annote =       {Special Issue on Panoramic Robotics}
 }
+
+@Book{Andersen-20,
+  author =       {Kurt Andersen},
+  title =        {Evil Geniuses:  The Unmaking of America, A Recent History},
+  publisher =    {Random House},
+  year =         2020
+}
+
+@Book{Acemoglu-23,
+  author =       {Daron Acemoglu and Simon Johnson},
+  title =        {Power and Progress},
+  publisher =    {PublicAffairs},
+  year =         2023,
+}
