--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,157 @@
+@incollection{Mukherjee_2023_Docker4ML-P2,
+  author          = {Suvaditya Mukherjee},
+  title           = {Getting Used to Docker for Machine Learning},
+  booktitle       = {PyImageSearch},
+  editor          = {Puneet Chugh and Aritra Roy Gosthipaty and Susan Huot and
+                  Kseniia Kidriavsteva and Ritwik Raha},
+  year            = 2023,
+  url             = {https://pyimg.co/hf5bk},
+}
+
+@inproceedings{rana2023sayplan,
+  title           = {SayPlan: Grounding Large Language Models using 3D Scene
+                  Graphs for Scalable Task Planning},
+  author          = {Krishan Rana and Jesse Haviland and Sourav Garg and Jad
+                  Abou-Chakra and Ian Reid and Niko Suenderhauf},
+  booktitle       = {7th Annual Conference on Robot Learning},
+  year            = 2023,
+  url             = {https://openreview.net/forum?id=wMpOMO0Ss7a}
+}
+
+@misc{open_x_embodiment_rt_x_2023,
+  title =        {Open {X-E}mbodiment: Robotic Learning Datasets and {RT-X}
+                  Models},
+  author =       {Open X-Embodiment Collaboration and Abhishek Padalkar and
+                  Acorn Pooley and Ajinkya Jain and Alex Bewley and Alex Herzog
+                  and Alex Irpan and Alexander Khazatsky and Anant Rai and
+                  Anikait Singh and Anthony Brohan and Antonin Raffin and Ayzaan
+                  Wahid and Ben Burgess-Limerick and Beomjoon Kim and Bernhard
+                  Schölkopf and Brian Ichter and Cewu Lu and Charles Xu and
+                  Chelsea Finn and Chenfeng Xu and Cheng Chi and Chenguang Huang
+                  and Christine Chan and Chuer Pan and Chuyuan Fu and Coline
+                  Devin and Danny Driess and Deepak Pathak and Dhruv Shah and
+                  Dieter Büchler and Dmitry Kalashnikov and Dorsa Sadigh and
+                  Edward Johns and Federico Ceola and Fei Xia and Freek Stulp
+                  and Gaoyue Zhou and Gaurav S. Sukhatme and Gautam Salhotra and
+                  Ge Yan and Giulio Schiavi and Hao Su and Hao-Shu Fang and
+                  Haochen Shi and Heni Ben Amor and Henrik I Christensen and
+                  Hiroki Furuta and Homer Walke and Hongjie Fang and Igor
+                  Mordatch and Ilija Radosavovic and Isabel Leal and Jacky Liang
+                  and Jaehyung Kim and Jan Schneider and Jasmine Hsu and
+                  Jeannette Bohg and Jeffrey Bingham and Jiajun Wu and Jialin Wu
+                  and Jianlan Luo and Jiayuan Gu and Jie Tan and Jihoon Oh and
+                  Jitendra Malik and Jonathan Tompson and Jonathan Yang and
+                  Joseph J. Lim and João Silvério and Junhyek Han and Kanishka
+                  Rao and Karl Pertsch and Karol Hausman and Keegan Go and
+                  Keerthana Gopalakrishnan and Ken Goldberg and Kendra Byrne and
+                  Kenneth Oslund and Kento Kawaharazuka and Kevin Zhang and
+                  Keyvan Majd and Krishan Rana and Krishnan Srinivasan and
+                  Lawrence Yunliang Chen and Lerrel Pinto and Liam Tan and
+                  Lionel Ott and Lisa Lee and Masayoshi Tomizuka and Maximilian
+                  Du and Michael Ahn and Mingtong Zhang and Mingyu Ding and
+                  Mohan Kumar Srirama and Mohit Sharma and Moo Jin Kim and
+                  Naoaki Kanazawa and Nicklas Hansen and Nicolas Heess and
+                  Nikhil J Joshi and Niko Suenderhauf and Norman Di Palo and Nur
+                  Muhammad Mahi Shafiullah and Oier Mees and Oliver Kroemer and
+                  Pannag R Sanketi and Paul Wohlhart and Peng Xu and Pierre
+                  Sermanet and Priya Sundaresan and Quan Vuong and Rafael
+                  Rafailov and Ran Tian and Ria Doshi and Roberto Martín-Martín
+                  and Russell Mendonca and Rutav Shah and Ryan Hoque and Ryan
+                  Julian and Samuel Bustamante and Sean Kirmani and Sergey
+                  Levine and Sherry Moore and Shikhar Bahl and Shivin Dass and
+                  Shuran Song and Sichun Xu and Siddhant Haldar and Simeon
+                  Adebola and Simon Guist and Soroush Nasiriany and Stefan
+                  Schaal and Stefan Welker and Stephen Tian and Sudeep Dasari
+                  and Suneel Belkhale and Takayuki Osa and Tatsuya Harada and
+                  Tatsuya Matsushima and Ted Xiao and Tianhe Yu and Tianli Ding
+                  and Todor Davchev and Tony Z. Zhao and Travis Armstrong and
+                  Trevor Darrell and Vidhi Jain and Vincent Vanhoucke and Wei
+                  Zhan and Wenxuan Zhou and Wolfram Burgard and Xi Chen and
+                  Xiaolong Wang and Xinghao Zhu and Xuanlin Li and Yao Lu and
+                  Yevgen Chebotar and Yifan Zhou and Yifeng Zhu and Ying Xu and
+                  Yixuan Wang and Yonatan Bisk and Yoonyoung Cho and Youngwoon
+                  Lee and Yuchen Cui and Yueh-hua Wu and Yujin Tang and Yuke Zhu
+                  and Yunzhu Li and Yusuke Iwasawa and Yutaka Matsuo and Zhuo Xu
+                  and Zichen Jeff Cui},
+  howpublished = {\url{https://robotics-transformer-x.github.io}},
+  year =         {2023},
+}
+
+
+@InProceedings{padalkar23,
+  author =       { Abhishek Padalkar and Acorn Pooley and Ajinkya Jain and Alex
+                  Bewley and Alex Herzog and Alex Irpan and Alexander Khazatsky
+                  and Anant Rai and Anikait Singh and Anthony Brohan and Antonin
+                  Raffin and Ayzaan Wahid and Ben Burgess-Limerick and Beomjoon
+                  Kim and Bernhard Sch{\"o}lkopf and Brian Ichter and Cewu Lu
+                  and Charles Xu and Chelsea Finn and Chenfeng Xu and Cheng Chi
+                  and Chenguang Huang and Christine Chan and Chuer Pan and
+                  Chuyuan Fu and Coline Devin and Danny Driess and Deepak Pathak
+                  and Dhruv Shah and Dieter B{\"u}chler and Dmitry Kalashnikov
+                  and Dorsa Sadigh and Edward Johns and Federico Ceola and Fei
+                  Xia and Freek Stulp and Gaoyue Zhou and Gaurav S. Sukhatme and
+                  Gautam Salhotra and Ge Yan and Giulio Schiavi and Hao Su and
+                  Hao-Shu Fang and Haochen Shi and Heni Ben Amor and Henrik I.
+                  Christensen and Hiroki Furuta and Homer Walke and Hongjie Fang
+                  and Igor Mordatch and Ilija Radosavovic and Isabel Leal and
+                  Jacky Liang and Jaehyung Kim and Jan Schneider and Jasmine Hsu
+                  and Jeannette Bohg and Jeffrey Bingham and Jiajun Wu and
+                  Jialin Wu and Jianlan Luo and Jiayuan Gu and Jie Tan and
+                  Jihoon Oh and Jitendra Malik and Jonathan Tompson and Jonathan
+                  Yang and Joseph J. Lim and João Silvério and Junhyek Han and
+                  Kanishka Rao and Karl Pertsch and Karol Hausman and Keegan Go
+                  and Keerthana Gopalakrishnan and Ken Goldberg and Kendra Byrne
+                  and Kenneth Oslund and Kento Kawaharazuka and Kevin Zhang and
+                  Keyvan Majd Krishan Rana and Krishnan Srinivasan and Lawrence
+                  Yunliang Chen and Lerrel Pinto and Liam Tan and Lionel Ott and
+                  Lisa Lee and Masayoshi Tomizuka and Maximilian Du and Michael
+                  Ahn and Mingtong Zhang and Mingyu Ding and Mohan Kumar Srirama
+                  and Mohit Sharma and Moo Jin Kim and Naoaki Kanazawa and
+                  Nicklas Hansen and Nicolas Heess and Nikhil J Joshi and Niko
+                  Suenderhauf and Norman Di Palo and Nur Muhammad and Mahi
+                  Shafiullah and Oier Mees and Oliver Kroemer and Pannag R
+                  Sanketi and Paul Wohlhart and Peng Xu and Pierre Sermanet and
+                  Priya Sundaresan and Quan Vuong and Rafael Rafailov and Ran
+                  Tian and Ria Doshi and Roberto Martín-Martín and Russell
+                  Mendonca and Rutav Shah and Ryan Hoque and Ryan Julian and
+                  Samuel Bustamante and Sean Kirmani and Sergey Levine and
+                  Sherry Moore and Shikhar Bahl and Shivin Dass and Shuran Song
+                  and Sichun Xu and Siddhant Haldar and Simeon Adebola and Simon
+                  Guist and Soroush Nasiriany and Stefan Schaal and Stefan
+                  Welker and Stephen Tian and Sudeep Dasari and Suneel Belkhale
+                  and Takayuki Osa and Tatsuya Harada and Tatsuya Matsushima and
+                  Ted Xiao and Tianhe Yu and Tianli Ding and Todor Davchev and
+                  Tony Z. Zhao and Travis Armstrong and Trevor Darrell and Vidhi
+                  Jain and Vincent Vanhoucke and Wei Zhan and Wenxuan Zhou and
+                  Wolfram Burgard and Xi Chen and Xiaolong Wang and Xinghao Zhu
+                  and Xuanlin Li and Yao Lu and Yevgen Chebotar and Yifan Zhou
+                  and Yifeng Zhu and Ying Xu and Yixuan Wang and Yonatan Bisk
+                  and Yoonyoung Cho and Youngwoon Lee and Yuchen Cui and
+                  Yueh-hua Wu and Yujin Tang and Yuke Zhu and Yunzhu Li and
+                  Yusuke Iwasawa and Yutaka Matsuo and Zhuo Xu and Zichen Jeff
+                  Cui },
+  title =        {Open X-Embodiment: Robotic Learning Datasets and RT-X Models },
+  booktitle =    { },
+  year =         2023,
+  month =        { },
+  address =      { },
+  publisher =    { },
+  url =          {https://robotics-transformer-x.github.io/}
+}
+
+@Book{christensen23:icvs,
+  editor =       {Henrik I. Christensen and Peter Corke and Renaud Detry and
+                  Jean-Baptiste Weibel and Markus Vincze},
+  title =        {Computer Vision Systems},
+  publisher =    {Springer Verlag},
+  year =         2023,
+  volume =       14253,
+  series =       {Lecture Notes in Computer Science},
+  address =      {Vienna},
+  month =        {Sep}
+}
+
+
 @InProceedings{	  a_a_efros_recognizing_2003,
   title =        {Recognizing {Action} at a {Distance}},
   booktitle =    {{ICCV}},
@@ -79043,4 +79197,29 @@
   title =        {Power and Progress},
   publisher =    {PublicAffairs},
   year =         2023,
+}
+
+@misc{coda2023tdr,
+    author =     {Zhang, Arthur and Eranki, Chaitanya and Zhang, Christina and
+                  Hong, Raymond and Kalyani, Pranav and Kalyanaraman, Lochana
+                  and Gamare, Arsh and Esteva, Maria and Biswas, Joydeep},
+    publisher =  {Texas Data Repository},
+    title =      { {UT Campus Object Dataset (CODa)}},
+    year =       2023,
+    version =    {DRAFT VERSION},
+    doi =        {10.18738/T8/BBOQMV},
+    url =        {https://doi.org/10.18738/T8/BBOQMV}
+}
+
+@misc{zhang2023robust,
+    title =      {Towards Robust Robot 3D Perception in Urban Environments: The
+                  UT Campus Object Dataset},
+    author =     {Arthur Zhang and Chaitanya Eranki and Christina Zhang and
+                  Ji-Hwan Park and Raymond Hong and Pranav Kalyani and Lochana
+                  Kalyanaraman and Arsh Gamare and Arnav Bagad and Maria Esteva
+                  and Joydeep Biswas},
+    year =       {2023},
+    eprint =     {2309.13549},
+    archivePrefix ={arXiv},
+    primaryClass ={cs.RO}
 }
