Late November - surveys

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,21 @@
+@book{prince2023understanding,
+  author =       "Simon J.D. Prince",
+  title =        "Understanding Deep Learning",
+  publisher =    "MIT Press",
+  year =         2023,
+  url =          "http://udlbook.com"
+}
+
+@misc{paz2023occlusionaware,
+  title =        {Occlusion-Aware 2D and 3D Centerline Detection for Urban
+                  Driving via Automatic Label Generation},
+  author =       {David Paz and Narayanan E. Ranganatha and Srinidhi K. Srinivas
+                  and Yunchao Yao and Henrik I. Christensen},
+  year =         {2023},
+  eprint =       {2311.02044},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
 
 @InProceedings{shrutheesh23,
   author =       {Shrutheesh R. Iyer, Anwesan Pal1, Jiaming Hu1, Akanimoh
