End of November - Mainly NERF Mapping

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,81 @@
+@article{HE2023,
+  title =        {Toward Trustworthy Decision-Making for Autonomous Vehicles: A
+                  Robust Reinforcement Learning Approach with Safety Guarantees},
+  journal =      {Engineering},
+  year =         {2023},
+  issn =         {2095-8099},
+  doi =          {https://doi.org/10.1016/j.eng.2023.10.005},
+  url =          {https://www.sciencedirect.com/science/article/pii/S2095809923004708},
+  author =       {Xiangkun He and Wenhui Huang and Chen Lv},
+  keywords =     {Autonomous vehicle, Decision-making, Reinforcement learning,
+                  Adversarial attack, Safety guarantee},
+  abstract =     {While autonomous vehicles are vital components of intelligent
+                  transportation systems, ensuring the trustworthiness of
+                  decision-making remains a substantial challenge in realizing
+                  autonomous driving. Therefore, we present a novel robust
+                  reinforcement learning approach with safety guarantees to
+                  attain trustworthy decision-making for autonomous vehicles.
+                  The proposed technique ensures decision trustworthiness in
+                  terms of policy robustness and collision safety. Specifically,
+                  an adversary model is learned online to simulate the
+                  worst-case uncertainty by approximating the optimal
+                  adversarial perturbations on the observed states and
+                  environmental dynamics. In addition, an adversarial robust
+                  actor-critic algorithm is developed to enable the agent to
+                  learn robust policies against perturbations in observations
+                  and dynamics. Moreover, we devise a safety mask to guarantee
+                  the collision safety of the autonomous driving agent during
+                  both the training and testing processes using an interpretable
+                  knowledge model known as the Responsibility-Sensitive Safety
+                  model. Finally, the proposed approach is evaluated through
+                  both simulations and experiments. These results indicate that
+                  the autonomous driving agent can make trustworthy decisions
+                  and drastically reduce the number of collisions through robust
+                  safety policies.}
+}
+
+@misc{huang2023photoslam,
+  title =        {Photo-SLAM: Real-time Simultaneous Localization and
+                  Photorealistic Mapping for Monocular, Stereo, and RGB-D
+                  Cameras},
+  author =       {Huajian Huang and Longwei Li and Hui Cheng and Sai-Kit Yeung},
+  year =         {2023},
+  eprint =       {2311.16728},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@misc{xiong2023neural,
+  title =        {Neural Map Prior for Autonomous Driving},
+  author =       {Xuan Xiong and Yicheng Liu and Tianyuan Yuan and Yue Wang and
+                  Yilun Wang and Hang Zhao},
+  year =         {2023},
+  eprint =       {2304.08481},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@misc{li2023polymot,
+  title =        {Poly-MOT: A Polyhedral Framework For 3D Multi-Object Tracking},
+  author =       {Xiaoyu Li and Tao Xie and Dedong Liu and Jinghan Gao and Kun
+                  Dai and Zhiqiang Jiang and Lijun Zhao and Ke Wang},
+  year =         {2023},
+  eprint =       {2307.16675},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO}
+}
+
+@misc{sun2019deep,
+  title =        {Deep Affinity Network for Multiple Object Tracking},
+  author =       {ShiJie Sun and Naveed Akhtar and HuanSheng Song and Ajmal Mian
+                  and Mubarak Shah},
+  year =         {2019},
+  eprint =       {1810.11780},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  notes =        {rich vectors for object tracking and detection}
+}
+
 @book{prince2023understanding,
   author =       "Simon J.D. Prince",
   title =        "Understanding Deep Learning",
