--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,89 @@
+@misc{iyer2023household,
+  title =        {Household navigation and manipulation for everyday object
+                  rearrangement tasks},
+  author =       {Shrutheesh R. Iyer and Anwesan Pal and Jiaming Hu and Akanimoh
+                  Adeleye and Aditya Aggarwal and Henrik I. Christensen},
+  year =         2023,
+  eprint =       {2312.06129},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO}
+}
+
+@InProceedings{Zhi_2021_ICCV,
+  author =       {Zhi, Shuaifeng and Laidlow, Tristan and Leutenegger, Stefan
+                  and Davison, Andrew J.},
+  title =        {In-Place Scene Labelling and Understanding With Implicit Scene
+                  Representation},
+  booktitle =    {Proceedings of the IEEE/CVF International Conference on
+                  Computer Vision (ICCV)},
+  month =        {October},
+  year =         2021,
+  pages =        {15838-15847}
+}
+
+
+@misc{rosinol2022nerfslam,
+  title =        {NeRF-SLAM: Real-Time Dense Monocular SLAM with Neural Radiance
+                  Fields},
+  author =       {Antoni Rosinol and John J. Leonard and Luca Carlone},
+  year =         {2022},
+  eprint =       {2210.13641},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@InProceedings{Zhou_2023_ICCV,
+  author =       {Zhou, Xiaoyu and Lin, Zhiwei and Shan, Xiaojun and Wang,
+                  Yongtao and Sun, Deqing and Yang, Ming-Hsuan},
+  title =        {SAMPLING: Scene-adaptive Hierarchical Multiplane Images
+                  Representation for Novel View Synthesis from a Single Image},
+  booktitle =    {Proceedings of the IEEE/CVF International Conference on
+                  Computer Vision (ICCV)},
+  month =        {October},
+  year =         {2023},
+  pages =        {22830-22840}
+}
+
+@inproceedings{li2022read,
+  author =       {Li, Zhuopeng and Li, Lu and Zhu, Jianke*},
+  title =        {READ: Large-Scale Neural Scene Rendering for Autonomous
+                  Driving},
+  booktitle =    {AAAI},
+  year =         {2023}
+}
+
+@misc{huang2023photoslam,
+  title =        {Photo-SLAM: Real-time Simultaneous Localization and
+                  Photorealistic Mapping for Monocular, Stereo, and RGB-D
+                  Cameras},
+  author =       {Huajian Huang and Longwei Li and Hui Cheng and Sai-Kit Yeung},
+  year =         {2023},
+  eprint =       {2311.16728},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@misc{luo2023augmenting,
+  title =        {Augmenting Lane Perception and Topology Understanding with
+                  Standard Definition Navigation Maps},
+  author =       {Katie Z Luo and Xinshuo Weng and Yan Wang and Shuang Wu and
+                  Jie Li and Kilian Q Weinberger and Yue Wang and Marco Pavone},
+  year =         2023,
+  eprint =       {2311.04079},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@misc{mao2023language,
+  title =        {A Language Agent for Autonomous Driving},
+  author =       {Jiageng Mao and Junjie Ye and Yuxi Qian and Marco Pavone and
+                  Yue Wang},
+  year =         2023,
+  eprint =       {2311.10813},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
 @article{HE2023,
   title =        {Toward Trustworthy Decision-Making for Autonomous Vehicles: A
                   Robust Reinforcement Learning Approach with Safety Guarantees},
